[package]
name = "rust_lib_atlas"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.12.0"
libsignal-protocol = { git = "https://github.com/signalapp/libsignal", tag = "v0.94.1" }
rand = "0.9"
base64 = "0.22"
tokio = { version = "1", features = ["rt"] }
lazy_static = "1.5"
uuid = { version = "1", features = ["v4"] }
async-trait = "0.1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
